[tool.poetry]
name = "googleipquery"
version = "0.1.0"
description = ""
authors = ["Sedthakit Prasanphanich <sedthakit.prasanphanich@tink.com>"]
readme = "README.md"
packages = [{include  = "googleipquery"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
